# gnosis-mcp

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo-script.md  docker-compose.yaml  docker-compose.yml  llms-full.txt  llms-full.txt.tmpl  llms-install.md  llms.txt  llms.txt.tmpl  marketplace.json  pyproject.toml  server.json
.claude-plugin/: plugin.json
.claude/agent-memory/blogger-miozu/: MEMORY.md  project_blog-infrastructure.md  project_posts-written.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  docker.yml  ingest-docs.yml.example  publish.yml  release.yml
.internal/demo-source/: crawl.tape  hero.tape  stage-crawl.sh  stage-demo.sh
.internal/design/: parent-child-chunking.md
.internal/plans/: 2026-02-20-gnosis-mcp-improvements.md  2026-04-17-graph-view-custom.md  2026-04-17-graph-view-obsidian.md
agents/: README.md  context-loader.md  corpus-sync.md  doc-explorer.md  doc-keeper.md  doc-reviewer.md
articles/: chunk-size-reranker-findings.md
demo/: hero.tape
docs/: bench-experiments-2026-04-18.md  benchmarks.md  cli.md  config.md  deployment.md  embeddings-service.md  how-we-measure-search.md  overview.md  releasing.md  rest-api.md  show-hn.md  tools.md  troubleshooting.md
docs/plans/: 2026-02-22-rest-api.md
hooks/: hooks.json
pkg/arch/: .SRCINFO  PKGBUILD  PKGBUILD-git
scripts/: bench-embedders.sh  bump-version.sh  check-versions.sh  release.sh  render-llms.py  setup-labels.sh  update-arch-sums.sh
skills/: README.md
skills/context/: SKILL.md
skills/eval/: SKILL.md
skills/ingest/: SKILL.md
skills/manage/: SKILL.md
skills/search/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/tune/: SKILL.md
src/ansuz/: __init__.py  __main__.py  cli.py  config.py  db.py  schema.py  server.py
src/gnosis_mcp/: __init__.py  __main__.py  backend.py  cli.py  config.py  crawl.py  db.py  embed.py  ingest.py  local_embed.py  pg_backend.py  rerank.py  rest.py  schema.py  server.py  sqlite_backend.py  sqlite_schema.py  watch.py
src/gnosis_mcp/parsers/: git_history.py
src/stele/: __init__.py  __main__.py  cli.py  config.py  db.py  schema.py  server.py
tests/: conftest.py  test_backend.py  test_cli.py  test_config.py  test_crawl.py  test_db.py  test_embed.py  test_git_history.py  test_ingest.py  test_local_embed.py  test_mcp_e2e.py  test_prune.py  test_rerank.py  test_rest.py  test_rest_auth.py  test_rrf.py  test_schema.py  test_server.py  test_sqlite_backend.py  test_sqlite_hybrid.py  test_sqlite_schema.py  test_watch.py
tests/bench/: bench_beir.py  bench_compare.py  bench_mcp_e2e.py  bench_rag.py  bench_real_corpus.py  bench_search.py  bench_sweep.py  golden-knowledge.jsonl  summarize.py  sweep_new_knobs.py
tests/eval/: test_search_quality.py
