[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansuz"
version = "0.1.0"
description = "MCP server for PostgreSQL documentation with pgvector search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nicholas Glazer", email = "info@nicgl.com" }]
keywords = ["mcp", "documentation", "pgvector", "postgresql", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Database",
]
dependencies = [
    "mcp>=1.20",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
ansuz = "ansuz.cli:main"

[project.urls]
Homepage = "https://github.com/miozu-com/ansuz"
Repository = "https://github.com/miozu-com/ansuz"
Issues = "https://github.com/miozu-com/ansuz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ansuz"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
