[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnosis-mcp"
version = "0.4.0"
description = "MCP server for PostgreSQL documentation with pgvector search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nicholas Glazer", email = "info@nicgl.com" }]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "documentation",
    "pgvector",
    "postgresql",
    "ai",
    "llm",
    "claude",
    "cursor",
    "windsurf",
    "knowledge-base",
    "rag",
    "vector-search",
    "search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Database",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "mcp>=1.20",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
gnosis-mcp = "gnosis_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/miozu-com/gnosis-mcp"
Repository = "https://github.com/miozu-com/gnosis-mcp"
Issues = "https://github.com/miozu-com/gnosis-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gnosis_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
