[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnosis-mcp"
version = "0.13.1"
description = "Zero-config MCP server for searchable documentation (SQLite default, PostgreSQL optional)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nicholas Glazer", email = "info@nicgl.com" }]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "documentation",
    "sqlite",
    "knowledge-base",
    "rag",
    "vector-search",
    "search",
    "ai",
    "llm",
    "claude",
    "cursor",
    "windsurf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Database",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "mcp>=1.27,<2.0",
    "aiosqlite>=0.22,<1.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30,<1.0",
]
embeddings = [
    "onnxruntime>=1.22,<2.0",
    "tokenizers>=0.22,<1.0",
    "numpy>=2.0,<3.0",
    "sqlite-vec>=0.1.6,<1.0",
]
reranking = [
    "onnxruntime>=1.22,<2.0",
    "tokenizers>=0.22,<1.0",
    "numpy>=2.0,<3.0",
]
web = ["httpx>=0.28,<1.0", "trafilatura>=2.0,<3.0"]
rst = ["docutils>=0.22,<1.0"]
pdf = ["pypdf>=5.0,<6.0"]
formats = ["docutils>=0.22,<1.0", "pypdf>=5.0,<6.0"]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.0",
    "ruff>=0.14",
]

[project.scripts]
gnosis-mcp = "gnosis_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/nicholasglazer/gnosis-mcp"
Repository = "https://github.com/nicholasglazer/gnosis-mcp"
Issues = "https://github.com/nicholasglazer/gnosis-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gnosis_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "sqlite_only: test only runs against the SQLite backend",
    "postgres_only: test only runs against the PostgreSQL backend (requires GNOSIS_MCP_CI_PG=1)",
    "eval: search-quality eval tests (slow, not on PR CI)",
    "bench: benchmark harness, not for CI",
    "e2e: end-to-end MCP protocol subprocess tests (slow, not on pre-commit)",
]
